# test_game_server

./: .gitignore  CMakeLists.txt  GameObject.h  GameServer.sln  GameServer.vcxproj  GameServer.vcxproj.filters  GameWorld.h  PhysicsWorld.h  main.cpp
GameServer/x64/Debug/: GameServer.exe.recipe  vc143.idb
GameServer/x64/Debug/GameServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GameServer/x64/Release/: GameServer.exe.recipe  GameServer.vcxproj.FileListAbsolute.txt
GameServer/x64/Release/GameServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameServer.lastbuildstate  GameServer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
